--- a/Part3.ipynb
+++ b/Part3.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "1774a2e1",
+   "execution_count": 2,
+   "id": "0cc247b9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7b70f5b0",
+   "id": "21919e90",
    "metadata": {},
    "source": [
     "# Objective\n",
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a7babe66",
+   "id": "bd8fdffa",
    "metadata": {},
    "source": [
     "# Investigation of a 1/4 WP"
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1b039c63",
+   "id": "3684148a",
    "metadata": {},
    "source": [
     "## Objective\n",
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "adc4ff49",
+   "id": "0ac7f4bc",
    "metadata": {},
    "source": [
     "## Experimental method"
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9fb2152d",
+   "id": "48dacb2c",
    "metadata": {},
    "source": [
     "### Experimental set-up\n",
@@ -61,14 +61,14 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fa86d10f",
+   "id": "7e1c23f6",
    "metadata": {},
    "source": [
     "### Measurements\n",
     "\n",
     "Background is now 3 counts. It is less than earlier today because it is now dark outside.\n",
     "\n",
-    "We first notice that, when we rotate the 1/4 WP, we get maximal output powers at 0, 90, 180, and 270&deg;. This reveals that the two axes of transmission are at 90&deg;. The one along the x-axis is the fast axis and the one along the y-axis is the slow axis. They are called this way because the light travels faster along the former than along the faster one. This is what leads to the phase shift between the x and y component of the electric field in the polarised beam (which is $\\pi$ in the case of a 1/2 WP) WHY???\n",
+    "We first notice that, when we rotate the 1/4 WP, we get maximal output powers at 0, 90, 180, and 270&deg;. This reveals that the two axes of transmission are at 90&deg;. The one along the x-axis is the fast axis and the one along the y-axis is the slow axis. They are called this way because the light travels faster along the former than along the latter. This is what leads to the phase shift between the x and y component of the electric field in the polarised beam (which is $\\pi/2$ in the case of a 1/4 WP).\n",
     "\n",
     "We first want to know the effect of a 1/4 WP aligned along its fast axis on a 0&deg; SOP. We do this by setting the 1/2 WP to 0&deg; and rotating the analyser.\n",
     "\n",
@@ -78,7 +78,7 @@
     "\n",
     "**min transmission** at 90&deg; (4 counts), 270&deg; (3 counts)\n",
     "\n",
-    "We see here, that the 1/4 WP seemed to have had no effect on the SOP, as it is still horizontally polarised. Note that some of the light was still absorbed by the waveplate, as the maximum transmission power is diminished. WHY??? EFFECT OF FAST AXIS!!!\n",
+    "We see here, that the 1/4 WP seemed to have had no effect on the SOP, as it is still horizontally polarised. Note that some of the light was still absorbed by the waveplate, as the maximum transmission power is diminished.\n",
     "\n",
     "We now want to know the effect of a 1/4 WP aligned along its slow axis on a 0&deg; SOP (ie the 1/4 WP is rotated by 90 degrees). We do this by setting the 1/2 WP to 0&deg; so that the SOP incident on the 1/4 WP is at 0&deg; to the slow axis, and rotating the analyser.\n",
     "\n",
@@ -88,7 +88,7 @@
     "\n",
     "**min transmission** at 90&deg; (3 counts), 270&deg; (3 counts)\n",
     "\n",
-    "This means that whether the incident SOP is aligned with the slow or fast axis has no effect on it. WHY??? \n",
+    "This means that whether the incident SOP is aligned with the slow or fast axis has no effect on it.\n",
     "\n",
     "Now we can take the average of the powers, as we already did previously, and find"
    ]
@@ -96,7 +96,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "f1e4d858",
+   "id": "65db3da7",
    "metadata": {},
    "outputs": [
     {
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8bf4b087",
+   "id": "cbd90c82",
    "metadata": {},
    "source": [
     "We can see the ratio between the two will be very close to one, but not exactly, and their error bounds do not overlap. The two axes transmit a slightly different amount of light, but this is very small, though this could just be because of our error."
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e6bf3eed",
+   "id": "8f598298",
    "metadata": {},
    "source": [
     "# Creation of 45&deg; SOP"
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e646aece",
+   "id": "ac3ed929",
    "metadata": {},
    "source": [
     "## Objective\n",
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "43f087b9",
+   "id": "67f8317b",
    "metadata": {},
    "source": [
     "## Experimental method"
@@ -157,92 +157,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "107a9c05",
+   "id": "30702e84",
    "metadata": {},
    "source": [
-    "### Experimental set-up\n",
+    "The apparatus is the same as in the previous subsection. Here, we want to create circularly polarised light. To do this, we need a 45&deg; linear SOP incident on the 1/4 WP, as outlined in the lab script (The magnitude of the beam will stay the same because the two components $E_x$ and $E_y$ are equal, using simple geometry).\n",
     "\n",
-    "The apparatus is the same as in the previous subsection. Here, we want to create circularly polarised light. To do this, we need a 45&deg; linear SOP incident on the 1/4 WP. WHY??? Because the 1/2 WP shifts a SOP aligned with the x-axis by twice the angle of the 1/2 WP, we want it to be at 22.5&deg; The best way to achieve this is to set the angle to about 22&deg;, and then rotate the analyser, and adjust the 1/2 WP until we get the same power output for every angle of analyser (want the light to be circularly polarised, WHY and HOW???). The best I could do was power changing from 428 and 433, which would mean the elliptically polarised light had an eccentricity of 0.15. A circle has an eccentricity of 0.\n",
+    "Because the 1/2 WP shifts a SOP aligned with the x-axis by twice the angle of the 1/2 WP, we want it to be at 22.5&deg; The best way to achieve this is to set the angle to about 22&deg;, and then rotate the analyser around 360&deg;, and adjust the 1/2 WP until we get the same power output for every angle of analyser (as we want the light to be circularly polarised). The best I could do was power changing from 428 and 433, which would mean the elliptically polarised light had an eccentricity of about 0.15. A circle has an eccentricity of 0.\n",
     "\n",
-    "This method of adjusting an angle means that it is precise to less than 1 degree, which is far more precise than our previous methods, which were precise to the degree because of our reading error*. However, it is probably not suitable for setting every angle as it would mean setting the 1/2 and 1/4 WP such that the angle between the SOP leaving the 1/2 WP and the transmission axis of the 1/4 WP are at 45°, which may require more calculations, and so more time. (unsuitable for quick measurements)"
+    "This method of adjusting an angle means that it is precise to less than 1 degree, which is far more precise than our previous methods (they were precise to the degree because of our reading error). However, it is probably not suitable for setting every angle as it would mean setting the 1/2 and 1/4 WP such that the angle between the SOP leaving the 1/2 WP and the transmission axis of the 1/4 WP are at 45°, which may require more calculations, and so more time. (unsuitable for quick measurements)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "c04ab230",
-   "metadata": {},
-   "source": [
-    "# Optional part (NOT DONE YET)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "567e79a6",
-   "metadata": {},
-   "source": [
-    "## Aims"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "2963d75b",
-   "metadata": {},
-   "source": [
-    "## Experimental method"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "c9bfd16f",
-   "metadata": {},
-   "source": [
-    "### Set-up\n",
-    "\n",
-    "Add 1 quarter waveplate"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "f49401bd",
-   "metadata": {},
-   "source": [
-    "### Measurements\n",
-    "\n",
-    "- Fixed analyser, polariser, 1/2 WP at 0&deg;: sketch phase of output of both 1/4 WP for every combination of angles 0, 10, 20, 30 and 45&deg;\n",
-    "- conclude"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "fcccdcf4",
-   "metadata": {},
-   "source": [
-    "## Results"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "039eea3c",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "564d084a",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fdea0363",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "0e3e5840",
+   "id": "bfd82c9e",
    "metadata": {},
    "source": [
     "# Investigation of 2 1/4 WP in series"
@@ -250,15 +177,17 @@
   },
   {
    "cell_type": "markdown",
-   "id": "74a056ca",
+   "id": "87d62420",
    "metadata": {},
    "source": [
-    "## Aims"
+    "## Objective\n",
+    "\n",
+    "This is an investigation of the effect of 2 1/4 WP in series on a SOP. It also serves as an introduction to Stokes parameters, where we will need to know these effects for $P(45, -90)$ and $P(-45, -90)$"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "4a024faa",
+   "id": "bd6e610c",
    "metadata": {},
    "source": [
     "## Experimental method"
@@ -266,17 +195,17 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a1d4c6ed",
+   "id": "ff536a4e",
    "metadata": {},
    "source": [
     "### Experimental set-up\n",
     "\n",
-    "We add a second 1/4 WP to our apparatus between the analyser and the REF 1/4 WP. They must be aligned along their fast axis at 0&deg;, which should already have been the case, not counting a few tweaks. However, the two quarter wave plates were somehow not aligned along the same axis when at 0&deg; (the slow axis of one was aligned with the fast axis of the other), contrary to what was in the lab script, which created great confusion with the demonstrator, and they had to be realigned. This may cause our results in section 5.2.3 in the lab script to be different than what the demonstrators expect. WHY???"
+    "We add a second 1/4 WP to our apparatus between the analyser and the REF 1/4 WP. They must be aligned along their fast axis at 0&deg;, which should already have been the case, not counting a few tweaks. However, the two quarter wave plates were somehow not aligned along the same axis when at 0&deg; (the slow axis of one was aligned with the fast axis of the other), contrary to what was in the lab script, which created great confusion with the demonstrator, and they had to be realigned."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "ce14c753",
+   "id": "5519d4d3",
    "metadata": {},
    "source": [
     "### Measurements\n",
@@ -321,7 +250,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f7e5158d",
+   "id": "d57fe337",
    "metadata": {},
    "source": [
     "## Discussion"
@@ -329,10 +258,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b888a4fd",
+   "id": "0bab1650",
    "metadata": {},
    "source": [
-    "1/4 WPs are made out of birefringent material, which means the refractive index changes depending on the orientation of the components of the incoming SOP. This means one component of the light will be travelling faster than the other, creating a phase shift between the two. 1/4 WPs are made such that the phase shift between the two waves is $\\pi/2$, ie there is a 1/4 wave difference between the two, which explains the name. The reason why light at 45° to a 1/4 WP becomes circularly polarised is because one of the components will now have the form of a sine wave, while the other will still be a cosine wave (as $\\cos(\\theta - \\pi/2) = \\sin(\\theta)$). This means the electric field of the beam will basically draw the unit circle if the amplitude(which comes back to its definition)"
+    "1/4 WPs are made out of birefringent material, which means the refractive index changes depending on the orientation of the components of the incoming SOP. This means one component of the light will be travelling faster than the other, creating a phase shift between the two. 1/4 WPs are made such that the phase shift between the two waves is $\\pi/2$, ie there is a 1/4 wave difference between the two, which explains the name. The reason why light at 45° to a 1/4 WP becomes circularly polarised is because one of the components will now have the form of a sine wave, while the other will still be a cosine wave (as $\\cos(\\theta - \\pi/2) = \\sin(\\theta)$). This means the electric field of the beam will basically draw the unit circle if the amplitude is normalised (which comes back to its definition), and so the SOP is circular."
    ]
   }
  ],
@@ -352,7 +281,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
